# libheic

./: .gitignore  .npmignore  CMakeLists.txt  README.md  build.sh  heic.js  libheic.node.d.ts  package-lock.json  package.json
src/: lib.mm  libheic.h  libheic.mm
